# roof-pitch-overlay

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html  main.js  protractor.js  style.css
src-tauri/: Cargo.toml  pitch-gauge.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
